# autonomous-ml-research-agent

./: .gitignore  README.md  pyproject.toml
app/: __init__.py  main.py  runner.py
examples/: check_adversarial.py  feedback_loop.py  intelligent_optimizer.py  optimize_max.py  run_agent.py  run_autonomous_agent.py  run_competition.py  run_intelligent_agent.py  run_universal_agent.py  wundernn_demo.py
src/comet_swarm/: __init__.py  config.py  schemas.py
src/comet_swarm/agents/: __init__.py  base.py  coder.py  evaluator.py  reviewer.py  strategist.py
src/comet_swarm/graph/: __init__.py  state.py  workflow.py
src/comet_swarm/integrations/: __init__.py  comet_ml.py  opik.py
src/comet_swarm/sandbox/: __init__.py  e2b_executor.py
src/comet_swarm/tools/: __init__.py  eda.py  features.py  metrics.py  training.py
src/hackathon_agent/: __init__.py  agent.py  competition_config.py
src/hackathon_agent/agents/: data_scientist.py  evaluator.py  experiment_designer.py  ml_engineer.py
src/hackathon_agent/brain/: config.py  experiment_design.py  hypothesis_generation.py  optimizer.py
src/hackathon_agent/core/: agent.py  logger.py  observability.py  orchestrator.py
src/hackathon_agent/schema/: experiment.py
